--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -23,6 +23,37 @@
     "your_estate": "Your estate",
     "your_parcel": "Your parcel"
   },
+  "authorization": {
+    "allow": {
+      "MANAToken":
+        "Authorize the {contract_link} to operate MANA on your behalf",
+      "RCNToken": "Authorize the {contract_link} to operate RCN on your behalf"
+    },
+    "allowed": {
+      "MANAToken":
+        "You authorized the {contract_link} to operate MANA on your behalf",
+      "RCNToken":
+        "You authorized the {contract_link} to operate RCN on your behalf"
+    },
+    "approve": {
+      "LANDRegistry":
+        "Authorize the {contract_link} to operate LAND on your behalf"
+    },
+    "approved": {
+      "LANDRegistry":
+        "You authorized the {contract_link} to operate LAND on your behalf"
+    },
+    "disallowed": {
+      "MANAToken":
+        "You unauthorized the {contract_link} to operate MANA on your behalf",
+      "RCNToken":
+        "You unauthorized the {contract_link} to operate MANA on your behalf"
+    },
+    "disapproved": {
+      "LANDRegistry":
+        "You unauthorized the {contract_link} to operate LAND on your behalf"
+    }
+  },
   "buy_mana": {
     "action": "Buy More",
     "amount_too_big": "This amount is too big for the Bancor Network",
@@ -325,7 +356,8 @@
     "for_buying": "For buying",
     "for_selling": "For selling",
     "legacy_authorization": "Legacy authorization",
-    "pending_tx": "You have a pending transaction"
+    "pending_tx":
+      "This transaction is pending, go to your activity to see a detailed status"
   },
   "sign_in": {
     "account_unlocked": "Make sure your account is unlocked",
@@ -336,37 +368,6 @@
         "You can use the {metamask_link} extension or a hardware wallet like {ledger_nano_link}.",
       "mobile":
         "You can use mobile browsers such as {coinbase_link} or {imtoken_link}."
-    }
-  },
-  "authorization": {
-    "allow": {
-      "MANAToken":
-        "Authorize the {contract_link} to operate MANA on your behalf",
-      "RCNToken": "Authorize the {contract_link} to operate RCN on your behalf"
-    },
-    "allowed": {
-      "MANAToken":
-        "You authorized the {contract_link} to operate MANA on your behalf",
-      "RCNToken":
-        "You authorized the {contract_link} to operate RCN on your behalf"
-    },
-    "disallowed": {
-      "MANAToken":
-        "You unauthorized the {contract_link} to operate MANA on your behalf",
-      "RCNToken":
-        "You unauthorized the {contract_link} to operate MANA on your behalf"
-    },
-    "approve": {
-      "LANDRegistry":
-        "Authorize the {contract_link} to operate LAND on your behalf"
-    },
-    "approved": {
-      "LANDRegistry":
-        "You authorized the {contract_link} to operate LAND on your behalf"
-    },
-    "disapproved": {
-      "LANDRegistry":
-        "You unauthorized the {contract_link} to operate LAND on your behalf"
     }
   },
   "transaction": {
