--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -24,35 +24,18 @@
     "your_parcel": "あなたの区画"
   },
   "authorization": {
-    "allow": {
-      "MANAToken":
-        "あなたに代わって{contract_link}にMANAを動作させる権限を与える",
-      "RCNToken": "あなたのためにRCNを作動させるために{contract_link}を認証する"
-    },
-    "allowed": {
-      "MANAToken":
-        "あなたはあなたのためにMANAを動作させるために{contract_link}を許可しました",
-      "RCNToken":
-        "あなたはあなたのためにRCNを作動させるために{contract_link}を許可しました"
-    },
-    "approve": {
-      "LANDRegistry":
-        "あなたのためにLANDを動作させるために{contract_link}を認証する"
-    },
-    "approved": {
-      "LANDRegistry":
-        "あなたはあなたのためにLANDを動作させるために{contract_link}を許可しました"
-    },
-    "disallowed": {
-      "MANAToken":
-        "あなたはあなたの代わりにMANAを動作させるために{contract_link}を不正にしました",
-      "RCNToken":
-        "あなたはあなたの代わりにMANAを動作させるために{contract_link}を不正にしました"
-    },
-    "disapproved": {
-      "LANDRegistry":
-        "あなたはあなたの代わりにLANDを動作させるために{contract_link}を許可しなかった"
-    }
+    "allow":
+      "あなたに代わって{contract_link}が{symbol}を操作することを許可する",
+    "allowed":
+      "あなたは{contract_link}をあなたのために{symbol}を操作することを許可しました",
+    "approve":
+      "あなたに代わって{contract_link}が{symbol}を操作することを許可する",
+    "approved":
+      "あなたは{contract_link}をあなたのために{symbol}を操作することを許可しました",
+    "disallowed":
+      "あなたは{contract_link}をあなたのために{symbol}を操作することを許可しませんでした",
+    "disapproved":
+      "あなたは{contract_link}をあなたのために{symbol}を操作することを許可しませんでした"
   },
   "buy_mana": {
     "action": "もっと購入する",
