--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -219,9 +219,9 @@
     "payable_placeholder": "Payable in days",
     "pending_tx": "The mortgage for",
     "please_authorize_MANA":
-      "Please go to {settings_link} and and authorize the Mortgage Helper contract to operate MANA on your behalf",
+      "Please go to {settings_link} and and authorize the MortgageHelper contract to operate MANA on your behalf",
     "please_authorize_RCN":
-      "Please go to {settings_link} and authorize the Mortgage Manager contract to operate RCN on your behalf",
+      "Please go to {settings_link} and authorize the MortgageManager contract to operate RCN on your behalf",
     "punitory_rate": "Punitory interest rate",
     "punitory_rate_placeholder": "Punitory rate",
     "request": "Requesting a Mortgage",
@@ -236,12 +236,16 @@
   },
   "parcel_buy": {
     "about_to_buy": "You are about to buy {parcel_name} {parcel_price}.",
-    "approved_balance": "Your approved balance is {approved_balance}",
+    "allowed_balance": "Your allowance is {allowance}",
     "buy_land": "Buy LAND",
     "buy_mana": "{click_here} to buy some MANA.",
-    "didnt_approve": "You haven't authorized MANA usage",
+    "didnt_allow": "You haven't authorized MANA usage",
+    "didnt_allow_new_marketplace":
+      "You haven't authorized MANA usage for the new version of the Marketplace",
     "needs_at_least": "You need at least {mana} in order to buy this LAND.",
-    "please_approve":
+    "please_allow":
+      "Please go to {settings_link} and allow the LegacyMarketplace contract to operate MANA on your behalf",
+    "please_allow_new_marketplace":
       "Please go to {settings_link} and allow the Marketplace contract to operate MANA on your behalf",
     "total_balance": "Your balance is {balance}"
   },
