--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -242,14 +242,18 @@
   "parcel_buy": {
     "about_to_buy":
       "Vous êtes sur le point d'acheter {parcel_name} {parcel_price}",
-    "approved_balance": "Votre balance est de {approved_balance}",
+    "allowed_balance": "Votre allocation est {allowance}",
     "buy_land": "Acheter une LAND",
     "buy_mana": "{click_here} pour acheter du MANA.",
-    "didnt_approve": "Vous n'avez pas de MANA validée",
+    "didnt_allow": "Vous n'avez pas autorisé l'utilisation de MANA",
+    "didnt_allow_new_marketplace":
+      "Vous n'avez pas autorisé l'utilisation de MANA pour la nouvelle version du Marketplace",
     "needs_at_least":
       "Vous avez besoin d'au moins {mana} pour acheter cette LAND.",
-    "please_approve":
-      "Veuillez accéder à {settings_link} et autoriser le contrat Marketplace à déplacer MANA en votre nom.",
+    "please_allow":
+      "Veuillez vous rendre sur {settings_link} et autoriser le contrat LegacyMarketplace à utiliser MANA en votre nom",
+    "please_allow_new_marketplace":
+      "Veuillez vous rendre sur {settings_link} et autoriser le contrat Marketplace à opérer MANA en votre nom",
     "total_balance": "Votre solde est {balance}"
   },
   "parcel_cancel": {
